--- a/views/partials/header/head.ejs
+++ b/views/partials/header/head.ejs
@@ -12,6 +12,10 @@
     <!-- MDB -->
     <link href="https://cdnjs.cloudflare.com/ajax/libs/mdb-ui-kit/4.3.0/mdb.min.css" rel="stylesheet" />
     <link href="https://vjs.zencdn.net/7.2.3/video-js.css" rel="stylesheet">
+    <link
+    rel="stylesheet"
+    href="https://cdn.jsdelivr.net/npm/swiper/swiper-bundle.min.css"
+    />
     <!-- Main CSS -->
     <link rel="stylesheet" href="/styles/style.css">
     <link rel="stylesheet" href="/styles/tv.css">
