--- a/public/styles/style.css
+++ b/public/styles/style.css
@@ -32,6 +32,27 @@ header{
     word-spacing: 20px;
 }
 
+.swiper {
+    width: 100%;
+    padding-bottom: 50px;
+}
+
+.swiper-slide {
+    background-position: center;
+    background-size: cover;
+    width: 300px;
+    height: 300px;
+}
+
+.swiper-slide img {
+    display: block;
+    width: 100%;
+}
+
+.ad{
+    display: none;
+}
+
 
 
 
