--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,11 +1,46 @@
 <%- include('./partials/header/head') %>
 
-    <div class="container-fluid" style="background-color: #eee;min-height:100vh">
-        <div class="container">
-            <div class="row py-4">
+    <div class="container-fluid py-md-4 shadow-sm" style="background-color:rgb(236, 234, 234);min-height:100vh">
+        <div class="container pb-4 rounded" style="background-color: white;">
+            <div class="row p-3">
                 <div class="col-sm-12 col-md-6 col-lg-3 border d-none d-lg-block">
-                    <div class="d-flex justify-content-center align-items-center">
-                        <h3 class="text-primary mt-5 fst-italic">Ad Space</h3>
+                    <div class="ad">
+                        <p class="text-center pb-0 mt-1 fw-bold">Sponsored</p>
+                        <div class="swiper mySwiper">
+                            <div class="swiper-wrapper">
+                              <div class="swiper-slide">
+                                <img src="https://swiperjs.com/demos/images/nature-1.jpg" />
+                              </div>
+                              <div class="swiper-slide">
+                                <img src="https://swiperjs.com/demos/images/nature-2.jpg" />
+                              </div>
+                              <div class="swiper-slide">
+                                <img src="https://swiperjs.com/demos/images/nature-3.jpg" />
+                              </div>
+                              <div class="swiper-slide">
+                                <img src="https://swiperjs.com/demos/images/nature-4.jpg" />
+                              </div>
+                              <div class="swiper-slide">
+                                <img src="https://swiperjs.com/demos/images/nature-5.jpg" />
+                              </div>
+                              <div class="swiper-slide">
+                                <img src="https://swiperjs.com/demos/images/nature-6.jpg" />
+                              </div>
+                              <div class="swiper-slide">
+                                <img src="https://swiperjs.com/demos/images/nature-7.jpg" />
+                              </div>
+                              <div class="swiper-slide">
+                                <img src="https://swiperjs.com/demos/images/nature-8.jpg" />
+                              </div>
+                              <div class="swiper-slide">
+                                <img src="https://swiperjs.com/demos/images/nature-9.jpg" />
+                              </div>
+                            </div>
+                            <div class="swiper-pagination"></div>
+                          </div>
+                          <div class="d-flex justify-content-center">
+                            <a href="#" class="btn border">Contact For Ad</a>
+                          </div>
                     </div>
                 </div>
                 <div class="col-sm-12 col-md-8 col-lg-6 d-flex justify-content-center align-items-center">
@@ -19,8 +54,44 @@
                    
                 </div>
                 <div class="col-sm-12 col-md-4 col-lg-3 border p-2 d-none d-lg-block">
-                    <div class="d-flex justify-content-center align-items-center">
-                        <h3 class="text-primary mt-5 fst-italic">Ad Space</h3>
+                    <div class="ad">
+                        <p class="text-center pb-0 mt-1 fw-bold">Sponsored</p>
+                        <div class="swiper mySwiper">
+                            <div class="swiper-wrapper">
+                              <div class="swiper-slide">
+                                <img src="https://swiperjs.com/demos/images/nature-1.jpg" />
+                              </div>
+                              <div class="swiper-slide">
+                                <img src="https://swiperjs.com/demos/images/nature-2.jpg" />
+                              </div>
+                              <div class="swiper-slide">
+                                <img src="https://swiperjs.com/demos/images/nature-3.jpg" />
+                              </div>
+                              <div class="swiper-slide">
+                                <img src="https://swiperjs.com/demos/images/nature-4.jpg" />
+                              </div>
+                              <div class="swiper-slide">
+                                <img src="https://swiperjs.com/demos/images/nature-5.jpg" />
+                              </div>
+                              <div class="swiper-slide">
+                                <img src="https://swiperjs.com/demos/images/nature-6.jpg" />
+                              </div>
+                              <div class="swiper-slide">
+                                <img src="https://swiperjs.com/demos/images/nature-7.jpg" />
+                              </div>
+                              <div class="swiper-slide">
+                                <img src="https://swiperjs.com/demos/images/nature-8.jpg" />
+                              </div>
+                              <div class="swiper-slide">
+                                <img src="https://swiperjs.com/demos/images/nature-9.jpg" />
+                              </div>
+                            </div>
+                            <div class="swiper-pagination"></div>
+                          </div>
+
+                          <div class="d-flex justify-content-center">
+                            <a href="#" class="btn">Contact For Ad</a>
+                          </div>
                     </div>
                 </div>
             </div>
