--- a/views/admin/partials/sidebar.ejs
+++ b/views/admin/partials/sidebar.ejs
@@ -92,9 +92,9 @@
             </ul>
         </li>
         <li>
-            <a href="/admin/search-user-profile">
+            <a href="/admin/messages">
                 <i class='bx bxs-user-circle' ></i>
-                <span>User Profile Analystic</span>
+                <span>Messages</span>
             </a>
         </li>
         <li>
