--- a/views/admin/tv/edit-channel.ejs
+++ b/views/admin/tv/edit-channel.ejs
@@ -33,7 +33,7 @@
                     }
                 </script>
                 <div class="form-outline mt-3">
-                    <input type="text" name="m3u8_link" value="<%= channel.link %>" id="form7Example1" class="form-control" required/>
+                    <input type="url" name="m3u8_link" value="<%= channel.link %>" id="form7Example1" class="form-control" required/>
                     <label class="form-label" for="form7Example1">Channel m3u8 link *</label>
                   </div>
 
