--- a/views/pages/package.ejs
+++ b/views/pages/package.ejs
@@ -1,7 +1,7 @@
 <%- include('../partials/header/packageHead.ejs')  %>
 <body>
   <div class="container py-5">
-    <h3 class="text-center">We provide the best package, <span class="text-danger fw-bold"> Buy </span> and <span class="text-success fw-bold"> Earn </span> .</h3>
+    <h3 class="text-center">We provide the best package at <span class="text-success fw-bold"> Affordable Price  .</h3>
     <hr>
 </div>
   <div class="pricing-table my-3">
@@ -19,7 +19,7 @@
           <div class="ptable-description">
             <ul>
               <li>Silver</li>
-              <li>Channel <%= pkg[0].package_comission %></li>
+              <li>Validity <%= pkg[0].package_comission %> Month</li>
               <li>Customer Support</li>
               <li>Entry Level Package</li>
             </ul>
@@ -50,7 +50,7 @@
           <div class="ptable-description">
             <ul>
               <li>Gold</li>
-              <li>Channel <%= pkg[1].package_comission %></li>
+              <li>Validity <%= pkg[1].package_comission %> Month</li>
               <li>Customer Support</li>
               <li>Most Selling Package</li>
             </ul>
@@ -78,7 +78,7 @@
           <div class="ptable-description">
             <ul>
               <li>Platinium</li>
-               <li>Channel <%= pkg[2].package_comission %></li>
+               <li>Validity <%= pkg[2].package_comission %> Month</li>
               <li>Customer Support</li>
               <li>Master Package</li>
             </ul>
