--- a/views/partials/navbar.ejs
+++ b/views/partials/navbar.ejs
@@ -29,7 +29,13 @@
         <!-- Left links -->
         <ul class="navbar-nav me-auto mb-2 mb-lg-0">
           <li class="nav-item">
-            <a class="nav-link mx-1" href="/user/dashboard">LIVE TV</a>
+            <a class="nav-link mx-1 text-danger fw-bold" href="/live-tv">LIVE TV</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link mx-1" href="/packages">Our Packages</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link mx-1" href="/contact">Contact</a>
           </li>
         </ul>
      
