--- a/views/user/pages/pkg_payment.ejs
+++ b/views/user/pages/pkg_payment.ejs
@@ -5,7 +5,7 @@
             <div class="add-product-form d-md-flex justify-content-center p-2">
                 <div class="bg-light p-4 shadow-sm">
                     <form action="/user/pay" method="post" class="py-2">
-                        <h4 class="mb-1">Make payment and earn money!</h4>
+                        <h4 class="mb-1">Make payment and Enjoy Our Channel!</h4>
                        
                         <h5 class="text-center text-success">We accept</h5>
                         <hr>
@@ -15,8 +15,8 @@
                           </div>
                         <hr>
                         <div class="text-center"> 
-                            <p class="mb-0">Bkash: <span class="fst-italic text-primary fw-bold">01722726897</span></p>
-                            <p>Rocket: <span class="fst-italic text-primary fw-bold">017235326899</span></p>
+                            <p class="mb-0">Bkash(Merchant): <span class="fst-italic text-primary fw-bold">01866-152682</span></p>
+                            <p>Rocket(Merchant): <span class="fst-italic text-primary fw-bold">01324-4950151</span></p>
                         </div>
                         <div class="form-outline mb-3">
                             <input class="form-control" disabled />
@@ -30,7 +30,7 @@
                         </div>
                         <div class="form-outline mb-3">
                             <input class="form-control" disabled />
-                            <label class="form-label">Channel: <%= pkg[0].package_comission %></label>
+                            <label class="form-label">Validity: <%= pkg[0].package_comission %></label>
                         </div>
 
                         <div class="mb-2">
@@ -44,8 +44,8 @@
                             <select id="country" class="py-2 px-4 mb-3" onchange="update();"
                                 style="width: 100%; outline: black">
                                 <option class="py-2 px-5">Payment Method *</option>
-                                <option class="py-2 px-5" value="trc">Bkash</option>
-                                <option class="py-2 px-5" value="payIT">Rocket</option>
+                                <option class="py-2 px-5" value="Bkash">Bkash</option>
+                                <option class="py-2 px-5" value="Rocket">Rocket</option>
                             </select>
                             <input id="result" name="payment_method" value="" class="d-none">
 
