--- a/views/admin/ad/all-ad.ejs
+++ b/views/admin/ad/all-ad.ejs
@@ -1,7 +1,8 @@
 <%- include('../partials/header.ejs') %>
     <div class="container-fluid py-3">
         <div class="container">
-            <div class="table-responsive">
+          <a href="/admin-ad" class="btn btn-primary">create ad</a>
+            <div class="table-responsive mt-3">
                 <table class="table">
                     <thead class="table-dark">
                       <tr>
@@ -47,6 +48,22 @@
                       
                     </tbody>
                   </table>
+
+                  <div class="d-flex justify-content-center py-5">
+                    <nav aria-label="...">
+                        <ul class="pagination">
+                          <li class="page-item <%= currentPage === 1 ? 'disabled' : '' %>"  >
+                            <a  href="/admin-ad/get-all-ads?page=<%=currentPage-1 %>" class="page-link" >Previous</a>
+                          </li>
+                          <% for(let i=0; i< totalPage; i++) {%> 
+                            <li class="page-item  <%= currentPage == i+1 ? "active" : "" %> "><a class="page-link" href="/admin-ad/get-all-ads?page=<%=i+1 %> "><%= i+1 %> </a></li>
+                          <% }%> 
+                          <li class="page-item <%= currentPage >= totalPage ? 'disabled' : '' %>"  >
+                            <a class="page-link" href="/admin-ad/get-all-ads?page=<%=currentPage+1 %>">Next</a>
+                          </li>
+                        </ul>
+                      </nav>
+                  </div>
                </div>
         </div>
     </div>
