--- a/views/admin/pages/package/edit-package.ejs
+++ b/views/admin/pages/package/edit-package.ejs
@@ -31,7 +31,7 @@
 
                     <div class="form-outline mb-3">
                       <input type="number" name="package_comission" value="<%= pkg[0].package_comission %>" id="total_dollar" class="form-control" />
-                      <label class="form-label" for="total_dollar">Package Commision</label>
+                      <label class="form-label" for="total_dollar">Validity in Month</label>
                     </div>
             
                     <!-- Submit button -->
