--- a/views/admin/tv/all-channels.ejs
+++ b/views/admin/tv/all-channels.ejs
@@ -5,7 +5,6 @@
             <hr>
             <div class="my-2 mt-4 d-md-flex justify-content-between">
                 <a href="/admin/tv" class="btn btn-primary text-light">Add new channel</a>
-                <button class="btn btn-dark">Sorted By</button>
             </div>
            <div class="table-responsive">
             <table class="table">
@@ -26,19 +25,21 @@
                   <% }else{ %> 
                     <% for(let t of tv){ %> 
                       <tr>
-                        <th><img
+                        <th><a href="/live-tv/<%= t.slug %> ">
+                          <img
                             src="<%= t.thumbnails ? t.thumbnails : '/images/no_prev.jpg' %>"
                             class="img-thumbnail"
                             width="130px"
                             height="50px"
                             style="max-height:70px!important"
                             alt="<%= t.channel_name %> photo"
-                          /></th>
+                          />
+                        </a></th>
                         <td class="fw-bold"><%= t.channel_name %></td>
                         <td><%= t.category %></td>
                         <td><%= t.createdAt.toDateString() %></td>
-                        <td><span class="badge badge-<%= t.paid === 'Free' ? 'success' : 'primary' %> rounded-pill d-inline"
-                            ><%= t.paid %></span</td>
+                        <td><span class="badge badge-<%= t.paid === 'Free' ? 'success' : t.paid ? 'primary' : 'danger' %> rounded-pill d-inline"
+                            ><%= t.paid ? t.paid : 'Not Selected' %></span</td>
                         <td>
                             <div>
                                 <a class="text-light btn btn-sm btn-warning"  href="/admin/tv/edit-channel?channel_id=<%= t.id %> ">Edit</a> 
@@ -47,10 +48,26 @@
                         </td>
                       </tr>
                     <% } %> 
+                   
                   <% } %> 
                   
                 </tbody>
               </table>
+              <div class="d-flex justify-content-center py-5">
+                <nav aria-label="...">
+                    <ul class="pagination">
+                      <li class="page-item <%= currentPage === 1 ? 'disabled' : '' %>"  >
+                        <a  href="/admin/tv/all-channels?page=<%=currentPage-1 %>" class="page-link" >Previous</a>
+                      </li>
+                      <% for(let i=0; i< totalPage; i++) {%> 
+                        <li class="page-item  <%= currentPage == i+1 ? "active" : "" %> "><a class="page-link" href="/admin/tv/all-channels?page=<%=i+1 %> "><%= i+1 %> </a></li>
+                      <% }%> 
+                      <li class="page-item <%= currentPage >= totalPage ? 'disabled' : '' %>"  >
+                        <a class="page-link" href="/admin/tv/all-channels?page=<%=currentPage+1 %>">Next</a>
+                      </li>
+                    </ul>
+                  </nav>
+              </div>
            </div>
         </div>
     </div>
