--- a/views/admin/tv/index.ejs
+++ b/views/admin/tv/index.ejs
@@ -1,7 +1,8 @@
 <%- include('../partials/header.ejs') %>
     <div class="container-fluid py-3" style="background-color: #eeeeee;min-height: 90vh;">
         <div class="container bg-light p-lg-4 shadow-sm">
-            <h4 class="text-center mb-5 text-dark fst-italic fw-bold">Create a new channel! </h4>
+            <h4 class="text-center text-dark fst-italic fw-bold">Create a new channel! </h4>
+            <a href="/admin/tv/all-channels" class="btn btn-success btn-sm-block mb-5">View Chennels</a>
             <form action="/admin/tv/create-channel" method="post" enctype="multipart/form-data">
                 <div class="form-outline mb-4">
                     <input type="text" name="channel_name" id="form7Example1" class="form-control" required/>
@@ -29,7 +30,7 @@
                     }
                 </script>
                 <div class="form-outline mt-3">
-                    <input type="text" name="m3u8_link" id="form7Example1" class="form-control" required/>
+                    <input type="url" name="m3u8_link" id="form7Example1" class="form-control" required/>
                     <label class="form-label" for="form7Example1">Channel m3u8 link *</label>
                   </div>
 
@@ -44,10 +45,14 @@
                     <select id="country" class="py-2 px-4" onchange="update();"
                         style="width: 100%; outline: black">
                         <option class="py-2 px-5">Channel Category *</option>
-                        <option class="py-2 px-5" value="Ongoing">Sports</option>
-                        <option class="py-2 px-5" value="Completed">Movies</option>
-                        <option class="py-2 px-5" value="Upcoming">News</option>
-                        <option class="py-2 px-5" value="Upcoming">Cartoon</option>
+                        <option class="py-2 px-5" value="ZEE NETWORKS">ZEE NETWORKS</option>
+                        <option class="py-2 px-5" value="ZEE NETWORKS">ENTERTAINMENT</option>
+                        <option class="py-2 px-5" value="ZEE NETWORKS">MUSIC</option>
+                        <option class="py-2 px-5" value="ZEE NETWORKS">MOVIES</option>
+                        <option class="py-2 px-5" value="Sports">NEWS</option>
+                        <option class="py-2 px-5" value="Cartoon">Sports Channel</option>
+                        <option class="py-2 px-5" value="Cartoon">RELIGIOUS</option>
+                        <option class="py-2 px-5" value="Cartoon">Infotainment</option>
                     </select>
                     <input id="category" name="category" value="" class="d-none" >
                 </div>
@@ -56,8 +61,7 @@
                     <label for="flexCheckDefault">Featured</label>
                     <input name="featured" class="form-check-input mx-2" type="checkbox" id="flexCheckDefault" />
 
-                    <label for="flexCheckDefault2">From Youtube</label>
-                    <input name="youtube" class="form-check-input mx-2" type="checkbox" id="flexCheckDefault2" />
+    
                 </div>
 
                 <div class="mt-3">
@@ -71,16 +75,15 @@
                     <select id="paid_select" class="py-2 px-4" onchange="update_paid();"
                         style="width: 100%; outline: black">
                         <option class="py-2 px-5">Paid?</option>
-                        <option class="py-2 px-5" value="Ongoing">Free</option>
-                        <option class="py-2 px-5" value="Completed">Silver</option>
-                        <option class="py-2 px-5" value="Upcoming">Gold</option>
-                        <option class="py-2 px-5" value="Upcoming">Platinum</option>
+                        <option class="py-2 px-5" value="Free">Free</option>
+                        <option class="py-2 px-5" value="Silver">Silver</option>
+                        <option class="py-2 px-5" value="Gold">Gold</option>
+                        <option class="py-2 px-5" value="Platinum">Platinum</option>
                     </select>
                     <input id="paid" name="paid" value="" class="d-none" >
                 </div>
 
                 <button type="submit" class="btn btn-primary btn-sm-block mt-5">Create</button>
-
             </form>
 
         </div>
