--- a/views/admin/ad/edit-ad.ejs
+++ b/views/admin/ad/edit-ad.ejs
@@ -1,7 +1,7 @@
 <%- include('../partials/header.ejs') %>
     <div class="container-fluid py-3">
         <div class="container">
-            <h4 class="text-center mb-5 text-dark fst-italic fw-bold">Edit an ad </h4>
+            <h4 class="text-center mb-5 text-dark  fw-bold">Edit an ad </h4>
             <% if(ad.length==0) {%> 
                 <p>No Data Found</p>
             <% }else{ %> 
