--- a/views/admin/tv/all-channels.ejs
+++ b/views/admin/tv/all-channels.ejs
@@ -1,7 +1,7 @@
 <%- include('../partials/header.ejs') %>
     <div class="container-fluid py-3">
         <div class="container">
-            <h4 class="text-center text-dark fst-italic fw-bold">All Channels</h4>
+            <h4 class="text-center text-dark fw-bold">All Channels</h4>
             <hr>
             <div class="my-2 mt-4 d-md-flex justify-content-between">
                 <a href="/admin/tv" class="btn btn-primary text-light">Add new channel</a>
