--- a/views/admin/tv/edit-channel.ejs
+++ b/views/admin/tv/edit-channel.ejs
@@ -1,7 +1,7 @@
 <%- include('../partials/header.ejs') %>
     <div class="container-fluid py-3" style="background-color: #eeeeee;min-height: 90vh;">
         <div class="container bg-light p-lg-4 shadow-sm">
-            <h4 class="text-center mb-5 text-dark fst-italic fw-bold">Create a new channel! </h4>
+            <h4 class="text-center mb-5 text-dark fw-bold">Create a new channel! </h4>
             
             <form action="/admin/tv/edit-channel" method="post" enctype="multipart/form-data">
                 <div class="form-outline mb-4">
