--- a/views/admin/tv/index.ejs
+++ b/views/admin/tv/index.ejs
@@ -1,7 +1,7 @@
 <%- include('../partials/header.ejs') %>
     <div class="container-fluid py-3" style="background-color: #eeeeee;min-height: 90vh;">
         <div class="container bg-light p-lg-4 shadow-sm">
-            <h4 class="text-center text-dark fst-italic fw-bold">Create a new channel! </h4>
+            <h4 class="text-center text-dark  fw-bold">Create a new channel! </h4>
             <a href="/admin/tv/all-channels" class="btn btn-success btn-sm-block mb-5">View Chennels</a>
             <form action="/admin/tv/create-channel" method="post" enctype="multipart/form-data">
                 <div class="form-outline mb-4">
