--- a/views/pages/auth/login.ejs
+++ b/views/pages/auth/login.ejs
@@ -1,7 +1,7 @@
 <%- include('../../partials/header/authHead.ejs') %>
 <div class="container h-100">
     <div class="login_name_wrapper">
-        <div class="d-flex justify-content-center">Global Crypto</div>
+        <div class="d-flex justify-content-center">ISP TV - LOGIN</div>
     </div>
 <div class="d-flex justify-content-center h-50" >
     <div class="user_card">
@@ -15,7 +15,7 @@
                 </div>
                 <div class="input-group mb-3">
                     <div class="input-group-append"> <span class="input-group-text"><i class="far fa-envelope"></i></span> </div>
-                    <input id="email" type="text" name="email" class="form-control input_user" placeholder="email" required>
+                    <input id="email" type="email" name="email" class="form-control input_user" placeholder="email" required>
                 </div>
                 <div class="input-group mb-4">
                     <div class="input-group-append"> <span class="input-group-text"><i class="fas fa-key"></i></span> </div>
