--- a/views/user/pages/pkg_payment.ejs
+++ b/views/user/pages/pkg_payment.ejs
@@ -52,6 +52,11 @@
                         </div>
 
                         <div class="form-outline mb-3">
+                            <input type="text" name="phone_no"  required id="total_dollar"
+                                class="form-control"/>
+                            <label class="form-label" for="total_dollar">Phone No *</label>
+                        </div> 
+                        <div class="form-outline mb-3">
                             <input type="text" name="txid"  required id="total_dollar"
                                 class="form-control"/>
                             <label class="form-label" for="total_dollar">Transaction ID *</label>
