--- a/views/admin/ad/createAd.ejs
+++ b/views/admin/ad/createAd.ejs
@@ -1,7 +1,7 @@
 <%- include('../partials/header.ejs') %>
     <div class="container-fluid py-3">
         <div class="container">
-            <h4 class="text-center mb-5 text-dark fst-italic fw-bold">Create an ad </h4>
+            <h4 class="text-center mb-5 text-dark  fw-bold">Create an ad </h4>
             <a href="/admin-ad/get-all-ads" class="btn btn-success mb-3">All ads</a>
 
             <form action="/admin-ad" method="post" enctype="multipart/form-data">
