--- a/views/admin/partials/sidebar.ejs
+++ b/views/admin/partials/sidebar.ejs
@@ -74,7 +74,7 @@
         </li>
         <li class="sidebar-submenu">
             <a href="#" class="sidebar-menu-dropdown">
-                <i class='bx bxs-package'></i>
+                <i class='bx bx-credit-card-front' ></i>
                 <span>Ad Management</span>
                 <div class="dropdown-icon"></div>
             </a>
@@ -93,8 +93,14 @@
         </li>
         <li>
             <a href="/admin/messages">
-                <i class='bx bxs-user-circle' ></i>
+                <i class='bx bxs-chat'></i>
                 <span>Messages</span>
+            </a>
+        </li> 
+         <li>
+            <a href="/admin/users">
+                <i class='bx bxs-user-circle' ></i>
+                <span>Users</span>
             </a>
         </li>
         <li>
