--- a/views/user/pages/my_package.ejs
+++ b/views/user/pages/my_package.ejs
@@ -16,7 +16,24 @@
                     <p>Registered: <span class="fw-bold fst-italic"><%= pkg[0].createdAt.toDateString() %> </span></p>
                     <p>Package: <span class="fw-bold fst-italic"><%= pkg[0].package_name %></span></p>
                     <p>Package Price: <span class="fw-bold fst-italic"><%= pkg[0].price %> TK</span></p>
-                    <p>Validity: <span class="fw-bold fst-italic"><%= pkg[0].package_comission %> Month</span></p>
+
+                    <p>Valid Till: 
+                        <span class="fw-bold fst-italic">
+                            <%
+                                let d = pkg[0].createdAt
+                                let valid = d.setMonth(pkg[0].createdAt.getMonth() + pkg[0].package_comission)
+                                
+                            %>
+                            <%= d.toDateString() %> 
+                        </span>
+                    </p>
+                    <p>Validity left: 
+                        <span class="badge badge-<%= valid - Date.now() >= 0 ? 'success' : 'danger' %>  fw-bold fst-italic">
+                           
+                            <%= moment(valid) %> 
+                        </span>
+                    </p>
+
                     <p>Payment Status:  <span class="badge badge-<%= pkg[0].approval_status === 1 ? "success" : "warning" %> rounded-pill d-inline"><%= pkg[0].approval_status === 1 ? "paid" : "payment pending" %> </span></p>
 
                     <% if(pkg_payment.length){ %> 
@@ -28,7 +45,7 @@
                         <% } %> 
                         <h5 class="text-success py-2">Payment Information</h5>
                         <p>Payment Method: <span class="text-dark fst-italic"><%= pkg_payment[0].payment_method %> </span></p>
-                        <p>Payment Number: <span class="text-dark fst-italic"><%= pkg_payment[0].payment_number %> </span></p>
+                        <p>Payment Number: <span class="text-dark fst-italic"><%= pkg_payment[0].phone_no %> </span></p>
                         <p>Transaction ID: <span class="text-dark fst-italic"><%= pkg_payment[0].transaction_number %> </span> </p>
                         <p>Payment Approval Status:  <span class="badge badge-<%= pkg[0].approval_status === 1 ? "success" : "warning" %> rounded-pill d-inline"><%= pkg[0].approval_status === 1 ? "Approved" : "Not approved yet !" %> </span></p>
                         <hr>
