--- a/views/livetv/singletv.ejs
+++ b/views/livetv/singletv.ejs
@@ -27,7 +27,7 @@
                 <div class="col-sm-12 col-md-8 col-lg-6 d-flex justify-content-center align-items-center">
                     <!-- HTML -->
                     <video id='hls-example' class="video-js vjs-default-skin" width="650"
-                        style="height: 500px!important;width: 100%!important;" controls>
+                        style="min-height: 500px!important;width: 100%!important;" controls>
                         <source type="application/x-mpegURL" src="<%= single_tv[0].link %>">
                     </video>
                 </div>
