--- a/views/admin/pages/package/pkg_buy_req.ejs
+++ b/views/admin/pages/package/pkg_buy_req.ejs
@@ -1,10 +1,15 @@
 <%- include('../../partials/header.ejs')  %>
+
 <div class="container-fluid py-3">      
     <div>
+      
       <% if(pkg.length == 0){ %> 
         <h3 class="text-center">No request found yet! Try to marketing your business!</h3>
       <% }else{ %> 
         <h3 class="text-center text-danger py-2">Total Pending Request: <%= pkg.length%> </h3>
+
+        <a class="btn btn-danger my-2" href="/admin/packages/approve?rejected=true">Rejected List</a>
+
         <div class="table-responsive">
           <table class="table align-middle mb-0 bg-white">
               <thead class="bg-light table-dark">
@@ -12,7 +17,7 @@
                   <th>User Info</th>
                   <th>Package Name</th>
                   <th>Package Price</th>
-                  <th>Payment Method</th>
+                  <th>Payment ID,Method</th>
                   <th>TX ID</th>
                   <th>Requested Time</th>
                   <th>Actions</th>
@@ -41,12 +46,18 @@
                     <td>
                       <p class="fw-normal mb-1"><%= p.price %> TK</p>
                     </td>
-                    <td><%= p.payment_method %></td>
+                    <td><span class="product_id"><%= p.pkg_payment_id %></span> <%= p.payment_method %></td>
                     <td><%= p.transaction_number %></td>
                     <td><%= moment(p.createdAt) %></td>
                     <td>
                       <% if(p.approval_status ==0){ %>
                         <a href="/admin/packages/approvethis?payment_id=<%=p.pkg_payment_id%>" class="btn btn-sm btn-success">Approve</a>
+                        <% if(p.message){ %> 
+                          <span>Rejected</span>
+                        <% }else{%>
+                          <button data-mdb-toggle="modal" data-mdb-target="#exampleModal" class="deleteProductBtn btn btn-sm btn-danger">Reject</button> 
+                        <% }%> 
+                        
                       <% }else{%> 
                         <p class="fst-italic text-center">Confirmed</p>
                       <% }%> 
@@ -59,6 +70,47 @@
       <% }%> 
     </div>
 </div>
+
+<!-- Modal -->
+<div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+  <div class="modal-dialog">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h5 class="modal-title" id="exampleModalLabel">Reject Reason</h5>
+        <button type="button" class="btn-close" data-mdb-dismiss="modal" aria-label="Close"></button>
+      </div>
+      <div class="modal-body">
+        <form action="/admin/packages/reject" method="post">
+          <!-- Password input -->
+          <input id="product_id_in_form" type="text" hidden  name="id" value="">
+          <div class="form-outline mb-4">
+            <input minlength="5"  name="message" type="text" id="form1Example2"class="form-control" required> 
+            <label class="form-label" for="form1Example2">Message</label>
+          </div>
+        
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-danger" data-mdb-dismiss="modal">Cancel</button>
+        <button type="submit" class="btn btn-primary">Send</button>
+      </div>
+    </form>
+    </div>
+  </div>
+</div>
+
+<script type="text/javascript">
+
+  const deleteProductBtn = document.getElementsByClassName("deleteProductBtn");
+  for (let i = 0; i < deleteProductBtn.length; i++) {
+    deleteProductBtn[i].addEventListener("click", () => {
+      let product_id = document.getElementsByClassName("product_id")
+
+      document.getElementById("product_id_in_form").value = product_id[i].innerText
+    })
+  }
+
+
+</script>
 <%- include('../../partials/footer.ejs')  %>
 </body>
 </html>
