--- a/views/pages/auth/register.ejs
+++ b/views/pages/auth/register.ejs
@@ -1,7 +1,7 @@
 <%- include('../../partials/header/authHead.ejs') %>
 <div class="container h-100">
     <div class="login_name_wrapper">
-        <div class="d-flex justify-content-center">Global Crypto</div>
+        <div class="d-flex justify-content-center">ISP TV - REGISTER</div>
     </div>
 <div class="d-flex justify-content-center h-50" >
     <div class="user_card">
