--- a/views/user/pages/my_package.ejs
+++ b/views/user/pages/my_package.ejs
@@ -38,16 +38,31 @@
 
                     <% if(pkg_payment.length){ %> 
                         <hr>
-                        <% if(pkg[0].approval_status === 1){ %> 
-                            <h5 class="text-center text-success fw-bold">Payment Complete!</h5>
-                        <% }else{ %> 
-                            <h5 class="text-center text-warning fw-bold">Your Payment info is submitted! Wait for confirmation!</h5>
-                        <% } %> 
-                        <h5 class="text-success py-2">Payment Information</h5>
-                        <p>Payment Method: <span class="text-dark fst-italic"><%= pkg_payment[0].payment_method %> </span></p>
-                        <p>Payment Number: <span class="text-dark fst-italic"><%= pkg_payment[0].phone_no %> </span></p>
-                        <p>Transaction ID: <span class="text-dark fst-italic"><%= pkg_payment[0].transaction_number %> </span> </p>
-                        <p>Payment Approval Status:  <span class="badge badge-<%= pkg[0].approval_status === 1 ? "success" : "warning" %> rounded-pill d-inline"><%= pkg[0].approval_status === 1 ? "Approved" : "Not approved yet !" %> </span></p>
+                        <div class="py-3">
+                        
+                            <% if(pkg[0].approval_status === 1){ %> 
+                                <h5 class="text-center text-success fw-bold">Payment Complete!</h5>
+                            <% }else{ %> 
+                                <h5 class="text-center text-warning fw-bold">Your Payment info is submitted! Wait for confirmation!</h5>
+                            <% } %> 
+
+                            <% if(pkg[0].message){ %>
+                                <div class="bg-danger text-center text-light rounded rounded-5  my-3"><h5>Request Rejected</h5></div> 
+
+                               <h6> message: <span class="fw-bold text-primary"><%= pkg[0].message %></span> </h6>
+                               <a href="/user/edit_payment?payment_id=<%= pkg[0].pkg_payment_id %> " class="btn btn-warning btn-sm">Edit Payment Info</a>
+                               <hr>
+
+                              
+                            <% } %> 
+
+                                
+                            <h5 class="text-success py-2">Payment Information</h5>
+                            <p>Payment Method: <span class="text-dark fst-italic"><%= pkg_payment[0].payment_method %> </span></p>
+                            <p>Payment Number: <span class="text-dark fst-italic"><%= pkg_payment[0].phone_no %> </span></p>
+                            <p>Transaction ID: <span class="text-dark fst-italic"><%= pkg_payment[0].transaction_number %> </span> </p>
+                            <p>Payment Approval Status:  <span class="badge badge-<%= pkg[0].approval_status === 1 ? "success" : "warning" %> rounded-pill d-inline"><%= pkg[0].approval_status === 1 ? "Approved" : "Not approved yet !" %> </span></p>
+                        </div>
                         <hr>
                     <% }%> 
                 </div>
