--- a/views/partials/navbar.ejs
+++ b/views/partials/navbar.ejs
@@ -18,12 +18,7 @@
       <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <!-- Navbar brand -->
         <a class="navbar-brand mt-2 mt-lg-0" href="/">
-          <img
-            src="https://mdbcdn.b-cdn.net/img/logo/mdb-transaprent-noshadows.webp"
-            height="15"
-            alt="MDB Logo"
-            loading="lazy"
-          />
+          <i class="fa-solid fa-tv"></i>
         </a>
 
         <!-- Left links -->
@@ -36,6 +31,9 @@
           </li>
           <li class="nav-item">
             <a class="nav-link mx-1" href="/contact">Contact</a>
+          </li> 
+          <li class="nav-item">
+            <a class="nav-link mx-1" href="/public/images/lock.png" download="isp-tv.apk">Download APP</a>
           </li>
         </ul>
      
